Fix/ Forum page: add pagination for forums with many replies  (#1904)
* Fix issues

* Fix tooltip focused state

* Add pagination experiment 1

* Pagination experiment 2

* Pagination experiment 3

* Fix issue show more

* Add pagination v3

* Fix bug

* Performance optimization; fix bug with visible count

* Performance optimizations

* Fix bug with cutoff index

* Always show more replies when clicking the more button

* Fix test

---------

--- a/styles/components/forum.scss
+++ b/styles/components/forum.scss
@@ -198,6 +198,9 @@ main.forum {
     .btn-group .btn + .btn {
       margin-left: -2px;
     }
+    .btn-group div.tooltip + .btn {
+      margin-left: -2px;
+    }
     .btn {
       background-color: #fff;
       border-color: lighten(constants.$mediumBlue, 10%);
